# f2

./: .gitignore  .trivy.yaml  LICENSE.md  Procfile  README.md  ethics.md  k3s.yml  terraform.tfstate
.builds/: amd64.yml  sync.yml
backend-src/: Cargo.toml  Cargo.toml.tpl  README.md  buf.gen.yaml  build.rs  rust-toolchain.toml
backend-src/crates/auth-svc/: Cargo.toml  Dockerfile  README.md
backend-src/crates/auth-svc/src/: main.rs
backend-src/crates/auth-svc/src/jwt/: extauth.rs  mod.rs
backend-src/crates/utils/: Cargo.toml
backend-src/crates/utils/src/client/: h2c.rs  mod.rs
backend-src/crates/utils/src/server/: h2c.rs  mod.rs
backend-src/crates/workflow-core/: Cargo.toml  README.md
backend-src/crates/workflow-core/migrations/: 001_initial_schema.sql
backend-src/crates/workflow-core/src/: event.rs  execution_result.rs  lib.rs
backend-src/crates/workflow-core/src/builder/: loop_builder.rs  mod.rs
backend-src/crates/workflow-core/src/execution/: context.rs  executor.rs  mod.rs  step_executor.rs
backend-src/crates/workflow-core/src/graph/: core.rs  edge_ctx.rs  executor.rs  macros.rs  mod.rs  params_node.rs  types.rs
backend-src/crates/workflow-core/src/host/: mod.rs  workflow_host.rs
backend-src/crates/workflow-core/src/models/: error.rs  execution_pointer.rs  mod.rs  workflow_instance.rs  workflow_step.rs
backend-src/crates/workflow-core/src/persistence/: mod.rs  postgresql.rs
backend-src/crates/workflow-core/src/traits/: executor.rs  mod.rs  persistence.rs  step_body.rs  workflow.rs  workflow_builder.rs  workflow_host.rs
backend-src/proto/f2/errors/v1/: errors.proto
backend-src/proto/f2/images/v1/: images.proto
backend-src/proto/f2/users/v1/: users.proto
backend-src/proto/f2/workflows/v1/: workflows.proto
backend-src/sequels/: v1.sql
backend-src/src/: main.rs
backend-src/src/api/: f2.errors.v1.rs  f2.users.v1.rs  mod.rs
backend-src/src/svcs/: users.rs
docs/: ethics.md  index.md
docs/about/: community-managers.md  contributing.md  data-collection.md  designers.md  developers.md  discussions.md  documenting.md  goals.md  index.md  license.md  project-managers.md  reporting-issues.md  submitting-feedback.md
docs/credits/: index.md  research.md
docs/workflows/: image-processing.md  index.md
frontend-src/: .gitignore  COLORS.md  app.json  global.css  metro.config.js  package.json  prebuild.sh  tailwind.config.js  tsconfig.json  wrangler.toml
frontend-src/app/: +html.tsx  _layout.tsx  index.tsx  mainDrawer.tsx
frontend-src/app/docs/: [...slug].tsx  [slug].tsx  _layout.tsx  index.tsx
frontend-src/app/landing/: index.tsx
frontend-src/components/: header.tsx  logo.tsx
frontend-src/components/docs/constants/: docCategories.generated.ts  docCategories.ts  docRegistry.generated.ts  markdownStyles.ts
frontend-src/components/docs/types/: index.ts
frontend-src/components/docs/utils/: buildNavTree.ts  processMarkdown.tsx  tableOfContents.ts
frontend-src/components/icons/: threads.tsx
frontend-src/components/ui/drawer/: drawerDebug.tsx  drawerItem.tsx  drawerSection.tsx
frontend-src/components/ui/footer/: footer.tsx  index.ts  styles.tsx
frontend-src/constants/: buildInfo.ts
frontend-src/contexts/: docsContext.tsx  drawerToggleContext.tsx
frontend-src/screens/docs/: document.tsx  documentationScreen.tsx
frontend-src/screens/landing/: index.tsx
frontend-src/scripts/: generate-docs-registry.js
frontend-src/src/: docs-registry.generated.ts  index.js
frontend-src/utils/: markdownParser.ts
ops/k3s/: .gitignore  .terraform.lock.hcl  README.md  bootstrap.sh  delete.sh  k8s-conv.py  modules.tf  outputs.tf  provider.tf  supabase-values.yaml  supabase.yaml  variables.tf
ops/k3s/modules/bootstrap/: modules.tf  (+4 more)
ops/k3s/supabase/: analytics-deployment.yaml  analytics-service.yaml  auth-deployment.yaml  db-deployment.yaml  functions-claim0-persistentvolumeclaim.yaml  functions-deployment.yaml  imgproxy-deployment.yaml  kong-claim0-persistentvolumeclaim.yaml  kong-deployment.yaml  kong-service.yaml  meta-deployment.yaml  realtime-deployment.yaml  rest-deployment.yaml  storage-deployment.yaml  studio-deployment.yaml  supabase.yaml  supavisor-claim0-persistentvolumeclaim.yaml  supavisor-deployment.yaml  supavisor-service.yaml  vector-claim0-persistentvolumeclaim.yaml  vector-claim1-persistentvolumeclaim.yaml  vector-deployment.yaml
(+192 files in other folders)
