[package]
name = "f2"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/auth-svc",
    #    "crates/cargo-docker",
    "crates/utils", "crates/workflow-core"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.88"
base64 = "0.22"
chrono = "0.4.41"
envoy-types = "0.6.0"
f2-utils = { path = "../utils" }
hyper-util = "0.1.14"
jsonwebtoken = "9.2"
mimalloc = { version = "*" }
parking_lot = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.13.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "auth-svc"
path = "crates/auth-svc/src/main.rs"
