[package]
name = "auth-svc"
version = "0.1.0"
edition = "2024"

[package.metadata.docker]
image = "ghcr.io/siennathesane/f2/auth-svc:latest"
dockerfile = "Dockerfile"
context = "crates"

[[bin]]
name = "auth-svc"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.2"
chrono = "0.4.41"
envoy-types = "0.6.0"
tonic = "0.13.1"
f2-utils = { path = "../utils" }
hyper-util = "0.1.14"