[package]
name = "auth-svc"
version = "0.1.0"
edition = "2024"

[package.metadata.docker]
image = "ghcr.io/siennathesane/f2/auth-svc:latest"
dockerfile = "Dockerfile"
context = "crates"

[[bin]]
name = "auth-svc"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
envoy-types = { workspace = true }
hyper-util = { workspace = true }
tonic = { workspace = true }
f2-utils = { path = "../utils" }