[package]
name = "workflow-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = "0.4.41"
mimalloc = { workspace = true }
parking_lot = { workspace = true }
petgraph = { version = "~0.8", features = ["rayon"] }
redis = { version = "0.32.2", features = ["tokio-comp", "cluster-async", "uuid"] }
redis-macros = "0.5.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.109", features = ["preserve_order"] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
dyn-clone = "1.0.19"
